add group queue schema and add getGroupList controller (#97)
* add group queue schema and add getGroupList controller

* fix bug that can add duplicate friend to database

* resolve pr comment
